-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 8.0.1, Qt Creator 9.0.0-beta1
-
None
-
93c15f48dc (qt-creator/qt-creator/master) 93c15f48dc (qt-creator/qt-creator/qds/dev)
- Scroll up or down until the cursor is not in the viewport.
- Type a character -> the editor automatically scrolls to the cursor position.
- Scroll again
- Type Backspace -> the editor doesn't scroll.
For Gerrit Dashboard: QTCREATORBUG-28316 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
438482,2 | Editor: ensure cursor is visible after handling backspace | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |