Editor: ensure cursor is visible after handling backspace

Fixes: QTCREATORBUG-28316
Change-Id: I1e8c9229704c700ad76f6906b1a220948c819c1b
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Orgad Shaneh <orgads@gmail.com>